[package]
name = "beavive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# IMPORTANT: when realeasing, enable the first bevy dependency, and disable the second one
# bevy = "0.12.1"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3